src/test/ui/type-alias-impl-trait/issue-63279.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-63279.rs:5:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0271]: type mismatch resolving `<[closure@$DIR/issue-63279.rs:11:5: 11:28] as FnOnce<()>>::Output == ()`
  --> $DIR/issue-63279.rs:8:16
   |
LL | type Closure = impl FnOnce();
   |                ^^^^^^^^^^^^^ expected opaque type, found `()`
   |
   = note: expected opaque type `impl FnOnce<()>`
                found unit type `()`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
